--- a/AAI_projekt.ipynb
+++ b/AAI_projekt.ipynb
@@ -1,107 +1,69 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting soundfile\n",
-      "  Downloading soundfile-0.12.1-py2.py3-none-win_amd64.whl (1.0 MB)\n",
-      "     ---------------------------------------- 1.0/1.0 MB 9.2 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: cffi>=1.0 in c:\\users\\rahgi\\anaconda3\\envs\\stats\\lib\\site-packages (from soundfile) (1.15.1)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\rahgi\\anaconda3\\envs\\stats\\lib\\site-packages (from cffi>=1.0->soundfile) (2.21)\n",
-      "Installing collected packages: soundfile\n",
-      "Successfully installed soundfile-0.12.1\n"
-     ]
-    }
-   ],
    "source": [
-    "#!pip install soundfile \n",
-    "!#pip install pynput"
+    "# Final Project: Tasten Klassifizierung anhand des Geräuchs mittels Keras und Tensorflow \n",
+    "### Universität: Hochschule der Medien Stuttgart\n",
+    "**Fakultät für Berufsbegleitende Studiengänge**\n",
+    "\n",
+    "**Studiengang:** Data Science\n",
+    "\n",
+    "**Abgabedatum:** 01.30.2024\n",
+    "\n",
+    "**Professor:** Johannes Maucher\n",
+    "\n",
+    "**Student:** Raghid Allaham"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## idea and approaches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## research question"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Audio saved as ./Data/esc_2024-01-17_17-02-30.wav\n"
+      "WARNING:tensorflow:From c:\\Users\\rahgi\\anaconda3\\envs\\stats\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import sounddevice as sd\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import queue\n",
-    "import threading\n",
-    "import soundfile as sf\n",
-    "import datetime\n",
-    "from pynput import keyboard\n",
+    "import json\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential, Model, load_model\n",
+    "from tensorflow.keras.layers import Dense,Input,Dropout,Flatten,Conv2D,MaxPool2D, AveragePooling2D\n",
+    "from tensorflow.keras.optimizers import SGD, Adam\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
     "\n",
-    "# Globale Variablen\n",
-    "SAMPLING_RATE = 44100\n",
-    "BUFFER_DURATION = 0.6  # 0.1 Sekunden vor und 1 Sekunde nach dem Drücken\n",
-    "buffer_size = int(BUFFER_DURATION * SAMPLING_RATE)\n",
-    "audio_buffer = np.zeros((buffer_size, 2), dtype=np.float32)\n",
-    "audio_queue = queue.Queue()\n",
+    "from imutils import paths\n",
+    "import cv2\n",
+    "import os\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "\n",
-    "# Funktion, um kontinuierlich Audio aufzunehmen\n",
-    "def audio_callback(indata, frames, time, status):\n",
-    "    global audio_buffer\n",
-    "    audio_buffer = np.roll(audio_buffer, -frames, axis=0)\n",
-    "    audio_buffer[-frames:, :] = indata\n",
     "\n",
-    "# Starten der kontinuierlichen Aufnahme\n",
-    "stream = sd.InputStream(callback=audio_callback, channels=2, samplerate=SAMPLING_RATE)\n",
-    "stream.start()\n",
-    "\n",
-    "# Funktion zum Speichern der Audiodaten\n",
-    "def save_audio():\n",
-    "    while True:\n",
-    "        item = audio_queue.get()\n",
-    "        if item is None:\n",
-    "            break  # Beenden, wenn None als Signal zum Beenden empfangen wird\n",
-    "        audio_data, key_name = item\n",
-    "        filename = f\"./Data/{key_name}_{datetime.datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}.wav\"\n",
-    "        sf.write(filename, audio_data, SAMPLING_RATE)\n",
-    "        print(f\"Audio saved as {filename}\")\n",
-    "\n",
-    "# Funktion, um auf Tastendruck zu reagieren\n",
-    "def on_press(key):\n",
-    "    try:\n",
-    "        key_name = key.char  # Versuche, das Zeichen der Taste zu erhalten\n",
-    "    except AttributeError:\n",
-    "        key_name = key.name  # Wenn es kein Zeichen gibt, verwende den Namen der Taste\n",
-    "\n",
-    "    current_buffer = np.copy(audio_buffer)\n",
-    "    audio_queue.put((current_buffer, key_name))\n",
-    "\n",
-    "    if key == keyboard.Key.esc:\n",
-    "        # Beenden, wenn die Escape-Taste gedrückt wird\n",
-    "        return False\n",
-    "\n",
-    "# Listener für Tastatureingaben\n",
-    "listener = keyboard.Listener(on_press=on_press)\n",
-    "listener.start()\n",
-    "\n",
-    "# Starten des Speicher-Threads\n",
-    "save_thread = threading.Thread(target=save_audio)\n",
-    "save_thread.start()\n",
-    "\n",
-    "# Warte, bis der Listener beendet wird (durch Drücken der Escape-Taste)\n",
-    "listener.join()\n",
-    "\n",
-    "# Signal zum Beenden an den Speicher-Thread senden und warten\n",
-    "audio_queue.put(None)\n",
-    "save_thread.join()"
+    "from sklearn.metrics import confusion_matrix, classification_report"
    ]
   }
  ],
