--- a/AAI_projekt.ipynb
+++ b/AAI_projekt.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "**Studiengang:** Data Science\n",
     "\n",
-    "**Abgabedatum:** 01.30.2024\n",
+    "**Abgabedatum:**  01.03.2024\n",
     "\n",
-    "**Professor:** Johannes Maucher\n",
+    "**Professor:** Dr. Christian Becker-Asano\n",
     "\n",
     "**Student:** Raghid Allaham"
    ]
