einführung die zweite Forschungsfrage

--- a/AAI_projekt_full.ipynb
+++ b/AAI_projekt_full.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Project: Tasten Klassifizierung anhand des Geräuchs mittels Keras und Tensorflow \n",
+    "# Ausarbeitung: Tasten Klassifizierung anhand des Geräuchs mittels Keras und Tensorflow \n",
     "### Universität: Hochschule der Medien Stuttgart\n",
     "**Fakultät für Berufsbegleitende Studiengänge**\n",
     "\n",
@@ -21,22 +21,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## idea and approaches"
+    "## Mutivation\n",
+    "\n",
+    "In der heutigen Zeit, in der die Bedeutung von Technologie und digitaler Kommunikation stetig wächst, entpuppt sich die Möglichkeit, Tastenanschläge durch ihr einzigartiges Klangprofil zu identifizieren, sowohl als faszinierende technologische Errungenschaft als auch als potenzielles Risiko. Diese Entwicklung eröffnet ein vielfältiges Spektrum an innovativen Einsatzmöglichkeiten, die von der Verbesserung der Interaktion zwischen Mensch und Computer bis hin zu potenziellen Sicherheitsbedenken und der Gefahr von Spionage reichen.\n",
+    "\n",
+    "Die entscheidende Rolle bei der Umsetzung dieser Technologie spielen Fortschritte in der künstlichen Intelligenz und spezialisierten Algorithmen für die Klassifizierung. Durch die Kombination leistungsfähiger Deep-Learning-Modelle mit fortschrittlichen Methoden der Computer-Audition erschließen sich neue Wege für eine akkurate Analyse und Interpretation von Klangprofilen und Formen. In dieser Arbeit werden solche technologischen Durchbrüche genutzt, um die feinen Nuancen in den Klangprofilen von Tastenanschlägen, die vom menschlichen Ohr oft nicht unterschieden werden können, zu erkennen und zu analysieren."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## research question"
+    "## Forschungsfragen:\n",
+    "1. *Inwieweit ist ein Computer in der Lage, Tasten einer Tastatur anhand ihrer Form zu klassifizieren?*\n",
+    "2. *Kann ein Computer anhand des Geräusches einer Taste auf einer Computer-Tastatur erkennen, um welche Taste es sich handelt, auch wenn sich die Tasten lediglich in ihrer Position auf der Tastatur und nicht in ihrer Form unterscheiden?*"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Struktur dieser Arbeit\n",
+    "\n",
+    "Diese Arbeit ist in zwei Hauptteile gegliedert, um die eingangs formulierten Forschungsfragen zu adressieren.\n",
+    "\n",
+    "**Teil I: Klassifizierung von Tastaturtasten anhand ihrer Form**\n",
+    "\n",
+    "Im ersten Teil dieser Arbeit konzentrieren wir uns auf die Fragestellung, inwieweit ein Computer in der Lage ist, Tasten einer Tastatur basierend auf ihrer Form zu klassifizieren. Hierbei wird ein detaillierter Einblick in die verwendeten Techniken und Methoden gegeben. Dies umfasst die Entwicklung eines Algorithmus von Grund auf, der speziell für diese Art der Klassifizierung konzipiert wird. Die Grundlage für das Training und die Validierung dieses Algorithmus bilden selbst aufgezeichnete Daten, die eine Vielzahl von Tastenformen abdecken.\n",
+    "\n",
+    "**Teil II: Entwicklung eines Proof-of-Concept-Netzwerks für die Klangprofilklassifizierung**\n",
+    "\n",
+    "Der zweite Teil widmet sich der Beantwortung der Frage, ob es möglich ist, anhand des Geräusches einer Taste auf einer Computer-Tastatur zu erkennen, um welche Taste es sich handelt, selbst wenn sich die Tasten lediglich in ihrer Position auf der Tastatur und nicht in ihrer Form unterscheiden. In diesem Abschnitt wird ein Proof-of-Concept-Netzwerk entwickelt, das zeigt, wie solch eine akustische Klassifizierung realisiert werden kann. Ähnlich wie im ersten Teil, wird auch hier ein Algorithmus von Grund auf erstellt und mit eigens aufgezeichneten Klangdaten trainiert und validiert."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hilfsmittel und Daten\n",
+    "\n",
+    "### Datenerfassung\n",
+    "\n",
+    "Für die Datenerfassung wurde eine speziell entwickelte Python-Anwendung eingesetzt, die in der Lage ist, Tastenanschläge zu registrieren und diese entsprechend zu kennzeichnen. Die Kennzeichnung erfolgte durch die Vergabe von Labels, die sich aus den Anfangsbuchstaben der betätigten Tasten zusammensetzen. Diese Labels wurden genutzt, um die aufgezeichneten Datenfiles systematisch zu benennen und sie anschließend automatisiert in eine strukturierte Ordnerhierarchie zu sortieren. Jede der aufgezeichneten Dateien repräsentiert einen einzelnen Tastenanschlag mit einer Dauer von einer Sekunde.\n",
+    "\n",
+    "### Aufnahmesetup:\n",
+    "\n",
+    "Das nachfolgende Bild illustriert das eingesetzte Aufnahmesetup, das sich durch die Verwendung des Samson Q2U Mikrofons und der Lenovo MT 81 TL Tastatur auszeichnet. Dieses Setup wurde sorgfältig ausgewählt, um die Anforderungen an die Datenqualität für die KI-basierte Analyse zu erfüllen.\n",
+    "\n",
+    "![Recording Setup](./etc/recording_setup.JPEG \"Recording Setup\")\n",
+    "\n",
+    "### Datenmenge und Auswahl der Tasten\n",
+    "\n",
+    "Angesichts der umfangreichen Anzahl von Tasten auf einer Standardtastatur (etwa 105) und dem Ziel, pro Taste etwa 200 Aufnahmen zu erstellen, ergibt sich eine theoretische Gesamtzahl von ca. 21.000 einzelnen Aufzeichnungen. Um diesen enormen Zeitaufwand zu bewältigen und dennoch einen aussagekräftigen Proof of Concept zu erbringen, fokussierte sich das Projekt zunächst auf eine selektive Anzahl von Tasten. Für die Untersuchung der ersten Forschungsfrage wurden spezifisch die Tasten '1', '6', 'Shift', 'Space' und 'Enter' ausgewählt. Für die zweite Forschungsfrage erweiterte sich das Spektrum auf alle Zifferntasten (0 bis 9) sowie die oberste Buchstabenreihe der Tastatur (q bis p).\n",
+    "\n",
+    "### Diversifizierung der Datenaufzeichnung\n",
+    "\n",
+    "Um der Herausforderung des Overfitting zu begegnen und eine robuste Datengrundlage zu schaffen, wurde besonderer Wert auf die Variabilität der Aufzeichnungsbedingungen gelegt. Die Datensammlung erfolgte an unterschiedlichen Orten und unter variierenden Umgebungsbedingungen. Dazu zählten diverse Hintergrundgeräusche, wechselnde Mikrofonpositionen, unterschiedliche Tastendruckgeschwindigkeiten, variierende Anschlagsdynamiken sowie der Einsatz verschiedener Finger und Hände. Die Aufzeichnungen wurden sowohl in ruhigen Umgebungen als auch in geräuschintensiveren Bereichen durchgeführt, wobei letztere einem Geräuschpegel ähnlich dem eines Cafés entsprachen\n",
+    "\n",
+    "```.\n",
+    "├── README.md\n",
+    "├── model/                     # Ordner für das exportierte KI-Modell\n",
+    "├── src/                       # Skript für die Audioaufnahme\n",
+    "|    ├── order_classifier.py\n",
+    "|    └── recorder.py\n",
+    "└── data/                      # Gesammelte Audiodaten\n",
+    "    ├── Taste1/\n",
+    "    ├── Taste2/\n",
+    "    └── ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ideen und Ansätze\n",
+    "\n",
+    "In der vorliegenden Arbeit wurden zwei zentrale Ideen verfolgt, um die Erkennung von Tastaturanschlägen mittels Künstlicher Intelligenz (KI) zu verbessern:\n",
+    "\n",
+    "1. **Direktes Training eines Convolutional Neural Networks (CNN) mit minimal vorverarbeiteten Daten:** Dieser Ansatz zielte darauf ab, die Rohdaten der Tastaturanschläge mit lediglich leichter Vorverarbeitung direkt einem CNN zur Mustererkennung und Klassifizierung zuzuführen. Die initiale Annahme war, dass das CNN in der Lage sein würde, relevante Merkmale aus den geringfügig aufbereiteten Daten selbstständig zu extrahieren und zu lernen. Allerdings stellte sich heraus, dass diese Methode weniger erfolgreich war als erhofft. Die Ergebnisse zeigten, dass das CNN Schwierigkeiten hatte, aussagekräftige Merkmale aus den minimal vorverarbeiteten Daten zu extrahieren, was zu suboptimalen Klassifizierungsergebnissen führte.\n",
+    "\n",
+    "2. **Transformation der Trainingsdaten in den Frequenzbereich und Training eines CNN-Klassifizierungsnetzwerks:** Aufgrund der Limitationen des ersten Ansatzes wurde eine alternative Methode untersucht, bei der die Trainingsdaten zunächst in den Frequenzbereich transformiert wurden, bevor sie für das Training des CNN-Klassifizierungsnetzwerks verwendet wurden. Diese Vorgehensweise basiert auf der Hypothese, dass die Charakteristika der Tastenanschläge im Frequenzbereich deutlicher hervortreten und somit dem CNN ermöglichen, effektiver zu lernen und präzisere Klassifizierungen vorzunehmen.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import der nötigen Bibliotheken:"
+   ]
   },
   {
    "cell_type": "code",
@@ -53,23 +126,49 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "# Standardbibliotheken\n",
     "import json\n",
+    "import os\n",
+    "\n",
+    "# Datenverarbeitung und numerische Operationen\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Datenvisualisierung\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Machine Learning und Deep Learning Frameworks\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential, Model, load_model\n",
-    "from tensorflow.keras.layers import Dense,Input,Dropout,Flatten,Conv1D,MaxPool1D, AveragePooling1D\n",
+    "from tensorflow.keras.layers import Dense, Input, Dropout, Flatten, Conv1D, MaxPool1D, AveragePooling1D\n",
     "from tensorflow.keras.optimizers import SGD, Adam\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from imutils import paths\n",
-    "import cv2\n",
-    "import os\n",
-    "from sklearn.preprocessing import LabelBinarizer\n",
     "from tensorflow.keras.utils import to_categorical\n",
-    "import wandb\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "import librosa"
+    "\n",
+    "# Bildverarbeitung\n",
+    "import cv2\n",
+    "from imutils import paths\n",
+    "\n",
+    "# Audioverarbeitung\n",
+    "import librosa\n",
+    "\n",
+    "# Experimentelles Tracking und Logging\n",
+    "import wandb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weights & Biases\n",
+    "\n",
+    "Im Rahmen des Trainingsprozesses ist es üblich, verschiedene Variablen und Architekturen experimentell zu testen, um schrittweise die optimale Architektur zu ermitteln oder durch Feinabstimmung (Finetuning) zu optimieren. Um während des Trainings ein effektives Experiment-Tracking und Logging zu gewährleisten und schnell einen Überblick über die leistungsstärksten Netzwerke zu erhalten, wurde die Bibliothek wandb verwendet.\n",
+    "\n",
+    "Über die Webseite von Weights & Biases kann der Trainingsverlauf verschiedener Architekturen miteinander verglichen werden. Das folgende Bild zeigt einen Ausschnitt aus dem Training, der die Validierungsgenauigkeit über verschiedene Durchläufe hinweg darstellt:\n",
+    "\n",
+    "![wandb validaiton Acc](./etc/wandb_diagram.png \"wandb validaiton Acc\")\n"
    ]
   },
   {
@@ -101,6 +200,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datenexploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -108,7 +214,7 @@
    "source": [
     "# Laden einer .wav-Datei\n",
     "audio_path = './Data/lernwelt/1_2024-01-21_12-11-24.wav'\n",
-    "audio, sr = librosa.load(audio_path, sr=None)\n"
+    "audio, sr = librosa.load(audio_path, sr=None)"
    ]
   },
   {
@@ -132,6 +238,13 @@
     "plt.plot(audio)\n",
     "plt.title('Audio Waveform')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Beim Visualisieren einer einfachen Aufnahme wird die charakteristische Struktur eines Tastenanschlags deutlich sichtbar. Im Zentrum der Grafik zeigt sich ein markantes Maximum bei ungefähr 22.000, welches den eigentlichen Tastenanschlag repräsentiert. Interessanterweise ist zu erkennen, dass bereits vor dem Tastenanschlag ein leichtes Rauschen vorhanden ist, welches auf die Umgebungsgeräusche des Raums zurückzuführen ist. Nach dem Tastenanschlag ist eine Schwingung sichtbar, die sich bis etwa zwei Drittel der Grafik erstreckt. Dies könnte sowohl vom Nachhall der Taste selbst als auch von der gesamten Tastatur herrühren. Die gesamte Aufnahme erstreckt sich über eine Sekunde, und da mit einer Sample-Rate von 44 kHz aufgezeichnet wurde, werden in der Grafik insgesamt 44.000 Samples dargestellt."
    ]
   },
   {
@@ -165,6 +278,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Das obere Bild präsentiert das gleiche Signal, jedoch dargestellt im Frequenzbereich über die Zeit. Auch hier ist deutlich erkennbar, dass das Spektrogramm bei etwa t=0.5 Sekunden heller wird. Dieser helle Bereich im Spektrogramm markiert den Moment des Tastenanschlags, was auf eine erhöhte Energie in bestimmten Frequenzbändern zu diesem Zeitpunkt hinweist. Die Helligkeit im Spektrogramm reflektiert eine Intensivierung der Frequenzanteile, die typischerweise mit dem akustischen Ereignis eines Tastenanschlags einhergeht."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -189,23 +309,6 @@
     "                audio = audio / np.max(np.abs(audio))  # Normalisierung\n",
     "                data.append(audio)\n",
     "                labels.append(class_label)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(data))"
    ]
   },
   {
