--- a/AAI_projekt_full copy.ipynb
+++ b/AAI_projekt_full copy.ipynb
@@ -153,7 +153,6 @@
     "\n",
     "# Audioverarbeitung\n",
     "import librosa\n",
-    "import librosa.display\n",
     "\n",
     "# Experimentelles Tracking und Logging\n",
     "import wandb"
@@ -275,6 +274,9 @@
     }
    ],
    "source": [
+    "import librosa.display\n",
+    "import numpy as np\n",
+    "\n",
     "X = librosa.stft(audio, n_fft=512)\n",
     "Xdb = librosa.amplitude_to_db(abs(X))\n",
     "\n",
@@ -298,6 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "\n",
     "base_path = './classes_2'  # Basispfad zu Ihren Audiodateien\n",
     "classes = os.listdir(base_path)  # Liste der Klassennamen\n",
     "\n",
