--- a/AAI_projekt_full.ipynb
+++ b/AAI_projekt_full.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +424,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
     }
    ],
    "source": [
@@ -435,10 +442,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"u\" kommt 95 vor.\n",
+      "1674 Labels insgesamt\n",
+      "Basline: 5.68 % \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\\"u\\\" kommt {labels.count('u')} vor.\")\n",
+    "print(f\"{len(labels)} Labels insgesamt\")\n",
+    "print(f\"Basline: {labels.count('u')/len(labels)*100:.2f} % \")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Datenvorbereitung**\n",
+    "Um die Forschungsfrage zu beantworten, ob ein Computer anhand des Geräusches einer Taste auf einer Computer-Tastatur erkennen kann, um welche Taste es sich handelt, selbst wenn sich die Tasten nur in ihrer Position auf der Tastatur und nicht in ihrer Form unterscheiden, ist es notwendig, eine Baseline zu definieren. Diese Baseline dient als Vergleichsmaßstab, um die Leistungsfähigkeit des künstlichen neuronalen Netzes gegenüber einem naiven Algorithmus oder einem Zufallsgenerator zu bewerten. Bei insgesamt 20 vorhandenen Klassen und unter Berücksichtigung, dass die Klasse u mit 95 Vorkommen am häufigsten auftritt, lässt sich die Baseline für eine zufällige Auswahl auf 5.68 % festlegen. Diese Zahl ergibt sich aus dem Verhältnis der häufigsten Klasse (u) zur Gesamtzahl der Samples (1674), was bedeutet, dass ein zufällig wählender Algorithmus mit einer Wahrscheinlichkeit von 5.68 % korrekt klassifizieren würde, wenn er stets die am häufigsten vorkommende Klasse auswählt. Ein künstliches neuronales Netzwerk muss diese Baseline übertreffen, um als besser als ein naiver Ansatz oder Zufall zu gelten."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datenvorbereitung\n",
     "\n",
     "Im folgenden Codeabschnitt wird überprüft, ob alle Datensätze die gleiche Länge aufweisen. Diese Überprüfung ist notwendig, um sicherzustellen, dass die Eingangsdaten für das Netzwerk eine einheitliche Länge haben."
    ]
@@ -454,13 +489,6 @@
     "for i in data:\n",
     "    if len(i)!=leng_data:\n",
     "        print(i)    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Die Basline welche geschlagen werden muss um zu beweisen, dass eine erkennung möglich ist 20 % classifcation Rate."
    ]
   },
   {
@@ -686,14 +714,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract Region of interest:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the picture above we can see that we are mostily intrested in the erea between 20000 and 30000 this why we will cut the first and last 10000 points away."
+    "### Extraktion der Region of Interest (ROI)\n",
+    "\n",
+    "In den oben vorgestellten Diagrammen, die für jede Klasse erstellt wurden, ist auffällig, dass die wesentlichen Aktivitäten hauptsächlich in der Mitte und im hinteren Bereich des Zeitrahmens stattfinden. Der Bereich vor dem Tastenanschlag sollte für die Analyse nicht relevant sein. Daher liegt unser Hauptinteresse im Bereich zwischen 20.000 und 30.000 Datenpunkten. Aus diesem Grund werden wir die ersten und letzten 10.000 Datenpunkte entfernen, um uns auf den relevantesten Abschnitt des Signals zu konzentrieren. Diese Vorgehensweise ermöglicht eine fokussierte Analyse der signifikanten Merkmale des Tastenanschlags, indem irrelevante Daten, die vor und nach dem eigentlichen Ereignis liegen, ausgeschlossen werden."
    ]
   },
   {
