--- a/AAI_projekt_full.ipynb
+++ b/AAI_projekt_full.ipynb
@@ -154,6 +154,7 @@
     "# Audioverarbeitung\n",
     "import librosa\n",
     "import librosa.display\n",
+    "from audiomentations import Compose, AddGaussianNoise, PitchShift, Shift\n",
     "\n",
     "# Experimentelles Tracking und Logging\n",
     "import wandb"
@@ -473,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datenvorbereitung\n",
+    "## Datenvorbereitung\n",
     "\n",
     "Im folgenden Codeabschnitt wird überprüft, ob alle Datensätze die gleiche Länge aufweisen. Diese Überprüfung ist notwendig, um sicherzustellen, dass die Eingangsdaten für das Netzwerk eine einheitliche Länge haben."
    ]
@@ -716,25 +717,25 @@
    "source": [
     "### Extraktion der Region of Interest (ROI)\n",
     "\n",
-    "In den oben vorgestellten Diagrammen, die für jede Klasse erstellt wurden, ist auffällig, dass die wesentlichen Aktivitäten hauptsächlich in der Mitte und im hinteren Bereich des Zeitrahmens stattfinden. Der Bereich vor dem Tastenanschlag sollte für die Analyse nicht relevant sein. Daher liegt unser Hauptinteresse im Bereich zwischen 20.000 und 30.000 Datenpunkten. Aus diesem Grund werden wir die ersten und letzten 10.000 Datenpunkte entfernen, um uns auf den relevantesten Abschnitt des Signals zu konzentrieren. Diese Vorgehensweise ermöglicht eine fokussierte Analyse der signifikanten Merkmale des Tastenanschlags, indem irrelevante Daten, die vor und nach dem eigentlichen Ereignis liegen, ausgeschlossen werden."
+    "In den oben vorgestellten Diagrammen, die für jede Klasse erstellt wurden, ist auffällig, dass die wesentlichen Aktivitäten hauptsächlich in der Mitte und im hinteren Bereich des Zeitrahmens stattfinden. Der Bereich vor dem Tastenanschlag sollte für die Analyse nicht relevant sein. Daher liegt unser Hauptinteresse im Bereich zwischen 20.000 und 30.000 Datenpunkten. Aus diesem Grund werden wir die ersten 15.000 und letzten 8000 Datenpunkte entfernen, um uns auf den relevantesten Abschnitt des Signals zu konzentrieren. Diese Vorgehensweise ermöglicht eine fokussierte Analyse der signifikanten Merkmale des Tastenanschlags, indem irrelevante Daten, die vor und nach dem eigentlichen Ereignis liegen, ausgeschlossen werden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1674 21100\n"
+      "(1674, 21100)\n"
      ]
     }
    ],
    "source": [
     "trimmed_data = [array[15000:-8000] for array in data]\n",
-    "print(len(trimmed_data),len(trimmed_data[0]) )"
+    "print(np.shape(trimmed_data))"
    ]
   },
   {
@@ -763,68 +764,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Peperation:"
+    "Im oberen Diagramm wird die Länge des Signals nach dem Kürzen dargestellt. Dieses Diagramm visualisiert die verbleibende Sequenz des Audiosignals, die sich nun auf den Bereich zwischen 15.000 und 36.100 Datenpunkten konzentriert, nachdem die ersten 15.000 und letzten 8000 Punkte entfernt wurden. Das Enderegbnis der Daten ist eine 1674 x 21100 Matrix "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data standarization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the previous trainings a Validation Accuracity of 65 % has been reached which is already very good. In the same time a Training Accourcty of 90 % has also been reached. Which is an indication for overfitting. To prevent overfitting, either a more samples are needed ( a bigger dataset) or we can augoment the available date with some noice pich and shifting.\n",
+    "### Daten-Augmentation\n",
     "\n",
-    "Bild Hinzufügen []"
+    "Um dem Overfitting entgegenzuwirken, ist es essenziell, über eine möglichst große und vielfältige Datenmenge zu verfügen. Dies kann entweder durch die Aufzeichnung neuer Daten mit höherer Varianz erreicht werden oder durch den Einsatz von Daten-Augmentation-Techniken. Daten-Augmentation ist ein leistungsfähiger Ansatz, um die Diversität des Trainingsdatensatzes künstlich zu erhöhen, ohne dass zusätzliche echte Daten aufgezeichnet werden müssen. Hierbei werden bestehende Daten modifiziert oder transformiert, um neue Varianten zu erzeugen. Dies kann durch verschiedene Methoden erfolgen, wie z.B. das Hinzufügen von Rauschen, die Anwendung von Zeitdehnung oder -kompression oder Pitch-Modifikation der Audiosignale. Durch diese Techniken wird das Modell robuster gegenüber kleinen Variationen in den Eingangsdaten und hilft, Overfitting zu reduzieren, indem es auf einer breiteren Basis von Trainingsbeispielen lernt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from audiomentations import Compose, AddGaussianNoise, PitchShift, Shift\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Erstellen Sie eine Augmentations-Pipeline\n",
+    "# Augmentations-Pipeline mit Rauschen Pitch-shift und shift\n",
     "augment = Compose([\n",
     "    AddGaussianNoise(min_amplitude=0.001, max_amplitude=0.010, p=0.5),\n",
     "    PitchShift(min_semitones=-4, max_semitones=4, p=0.5),\n",
     "    Shift(min_shift=-0.1, max_shift=0.1, p=0.5),\n",
     "])\n",
-    "\n",
+    "# Anwendung der Pipeline auf alle Daten\n",
     "augmented_samples_list = []\n",
-    "\n",
     "for sample in trimmed_data:    \n",
     "    augmented_sample = augment(samples=sample, sample_rate=len(trimmed_data[0]))\n",
     "    augmented_samples_list.append(augmented_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mfccs = librosa.feature.mfcc(y=augmented_samples_list[0], sr=sr, n_mfcc=13)\n",
-    "len(mfccs[3])"
    ]
   },
   {
@@ -948,6 +916,27 @@
     "    # MFCC-Feature-Extraktion\n",
     "    mfccs = librosa.feature.mfcc(y=sample, sr=len(training_data[0]), n_mfcc=13)\n",
     "    features_list.append(mfccs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mfccs = librosa.feature.mfcc(y=augmented_samples_list[0], sr=sr, n_mfcc=13)\n",
+    "len(mfccs[3])"
    ]
   },
   {
