--- a/AAI_projekt_full.ipynb
+++ b/AAI_projekt_full.ipynb
@@ -891,6 +891,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Librosa](https://github.com/librosa/librosa) ist eine umfangreiche Python-Bibliothek für die Analyse von Musik und Audiodaten. Sie bietet vielfältige Funktionen zur Extraktion von Merkmalen aus Audiodateien, unter anderem die Möglichkeit, Mel-Frequency Cepstral Coefficients (MFCCs) zu berechnen. MFCCs sind Koeffizienten, die zusammen das Mel-Frequency Cepstrum (MFC) bilden, eine Repräsentation des Kurzzeit-Leistungsspektrums eines Klangs. Diese Repräsentation basiert auf einer linearen kosinusförmigen Transformation der logarithmierten Leistungsspektren, kalibriert an der Mel-Skala. Die Mel-Skala ist eine perzeptive Skala der Tonhöhenempfindung des menschlichen Gehörs, die Frequenzen in einer Weise ordnet, die der tatsächlichen auditiven Wahrnehmung entspricht. Sie schreibt den für Menschen hörbaren Frequenzen unterschiedliche Bedeutungen zu, wobei niedrige Frequenzen genauer und höhere Frequenzen komprimierter dargestellt werden. Diese Skalierung ist darauf ausgelegt, die menschliche Hörwahrnehmung präziser abzubilden[^1][^2].   \n",
+    "\n",
+    "Die Berechnung von MFCCs umfasst im Wesentlichen die folgenden Schritte[^1]:\n",
+    "\n",
+    "\n",
+    "![Prozess zur Erstellung MFCC features](./etc/MFC-Transformation-process.drawio.png)\n",
+    "\n",
+    "\n",
+    "[^1]:Logan, Beth. (2000). Mel Frequency Cepstral Coefficients for Music Modeling. Proc. 1st Int. Symposium Music Information Retrieval.  https://ismir2000.ismir.net/papers/logan_paper.pdf \n",
+    "\n",
+    "[^2]:McFee, Brian, Colin Raffel, Dawen Liang, Daniel PW Ellis, Matt McVicar, Eric Battenberg, and Oriol Nieto. \"librosa: Audio and music signal analysis in python.\" In Proceedings of the 14th python in science conference, pp. 18-25. 2015"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1612,6 +1629,17 @@
     "Die Unmöglichkeit, die Entscheidungen des Netzwerks vollständig nachzuvollziehen, ist eine der Herausforderungen beim Einsatz von tiefen neuronalen Netzwerken, insbesondere in komplexen Klassifizierungsaufgaben. Die Fähigkeit des Netzwerks, Tastenanschläge zu klassifizieren, ohne dass die Zeit, die der Schall benötigt, um vom Ursprung zum Mikrofon zu gelangen, als Faktor berücksichtigt wird, unterstreicht die Fähigkeit des Modells, subtile Unterschiede im Klangprofil der Tastenanschläge zu erkennen. Die Variation in der Positionierung des Mikrofons während der Datenaufnahme hilft dabei, die Abhängigkeit der Klassifizierungsergebnisse von der Schallausbreitungszeit zu minimieren.\n",
     "\n",
     "Die Hypothese, dass die Abnutzung der Tastatur und die daraus resultierenden unterschiedlichen Klangprofile der Tasten einen Einfluss auf die Klassifizierung haben könnten, ist plausibel. Unterschiedliche Abnutzungsgrade können zu variierenden Klangsignaturen führen, die vom Netzwerk erlernt und zur Klassifizierung genutzt werden könnten. Um diese Annahme weiter zu untersuchen und die Robustheit des Modells zu evaluieren, wäre es sinnvoll, den Versuch mit einer größeren Anzahl an Tastaturen durchzuführen, einschließlich brandneuer Tastaturen, um die Variabilität in den Klangprofilen zu erhöhen. Dadurch könnte besser verstanden werden, inwieweit die physische Beschaffenheit und der Abnutzungsgrad der Tastaturen die Klassifizierungsergebnisse beeinflussen und ob das Modell in der Lage ist, konsistente Klassifizierungen über ein breites Spektrum von Tastaturen hinweg zu liefern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quellen:\n",
+    "\n",
+    "Logan, Beth. (2000). Mel Frequency Cepstral Coefficients for Music Modeling. Proc. 1st Int. Symposium Music Information Retrieval.  https://ismir2000.ismir.net/papers/logan_paper.pdf \n",
+    "\n",
+    "McFee, Brian, Colin Raffel, Dawen Liang, Daniel PW Ellis, Matt McVicar, Eric Battenberg, and Oriol Nieto. \"librosa: Audio and music signal analysis in python.\" In Proceedings of the 14th python in science conference, pp. 18-25. 2015"
    ]
   }
  ],
